# magwords

./: .dependency-cruiser.cjs  .dockerignore  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc.cjs  .releaserc.yml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.sh  cliff.toml  clippy.toml  cog.toml  dependency-cruiser.config.mjs  eslint.config.mjs  eslint.config.ts  index.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  project-words.txt  spellcheck.dic  tailwind.config.mjs  tsconfig.json  vite.config.ts
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: bump-ci  file-filters.yml  settings.yml
.github/workflows/: build-rust.yml  build-typescript.yml  build.yml  ci.yml  codeql.yml  compare-release-image.yml  container-cleanup.yml  format.yml  graduate-release.yml  lint-commits.yml  machete.yml  prettier.yml  publish-crate-after-release.yml  release.yml  retag-build-cache-after-pr.yml  retag-containers-after-push.yml  retag-containers-after-release.yml  rust.yml  semgrep.yml  spellcheck.yml  test-release.yml  typescript.yml
.husky/: pre-commit
assets/: word-list-all.txt  word-list.txt
back-end/src/: main.rs  router.rs  server.rs  signal_handlers.rs  span.rs  state.rs  utils.rs  words.rs
back-end/src/router/: api_router.rs  html_router.rs  mod.rs
back-end/src/states/: config.rs
back-end/src/utils/: env.rs  mod.rs  url.rs
build-scripts/: build.sh
crates/magwords/: Cargo.toml
crates/magwords/src/: cli.rs  main.rs  router.rs  server.rs  span.rs  state.rs  words.rs
crates/magwords/src/router/: html_router.rs
crates/magwords/src/states/: config.rs
crates/rust-seed-with-web/: Cargo.toml
crates/rust-seed-with-web/src/: main.rs  router.rs  server.rs
front-end/: vite-environment.d.ts
front-end/src/: index.html  test.setup.ts
front-end/src/components/: app.test.tsx  app.tsx
front-end/src/entrypoints/: index.test.ts  index.ts  index.tsx
front-end/src/lib/: emitters.ts  handlers.ts  listeners.ts  shared.ts  state.ts  types.ts  utilities.ts  utils.ts  web-socket-handler.ts
front-end/src/styles/: styles.scss
front-end/src/types/: axios.d.ts  env.d.ts  environment.ts
