[package]
name = "rust-seed-with-web"
version = "0.0.0-development"
edition = "2024"
rust-version = "1.88.0"
authors = ["Kristof Mattei"]
description = "rust-seed-with-web in Rust"
license = "MIT"
categories = ["fun"]
keywords = ["random"]
repository = "https://github.com/kristof-mattei/rust-seed-with-web"
include = ["src/**", "/LICENSE", "/LICENSE-*"]

[[bin]]
name = "rust-seed-with-web"
path = "back-end/src/main.rs"

[lints.clippy]
# don't stop from compiling / running
all = "warn"
cargo = "warn"
complexity = "warn"
correctness = "warn"
pedantic = "warn"
perf = "warn"
# restriction = "warn"
style = "warn"
suspicious = "warn"

# ensure we do Arc::clone(&arc) instead of arc.clone()
clone_on_ref_ptr = { level = "deny", priority = 127 }

# this has 0 performance implications, the binding is compiled away, and it could cause issues
# when done blindly, plus it makes it harder to debug as you cannot put breakpoints on return
# values of functions (yet)
let_and_return = { level = "allow", priority = 127 }

# nothing we can do about multiple crate versions, so this lint just creates noise
multiple_crate_versions = { level = "allow", priority = 127 }

# this one is debatable. continue is used in places to be explicit, and to guard against
# issues when refactoring
needless_continue = { level = "allow", priority = 127 }

# this one causes confusion when combining variables (`foo`) and
# dereferenced variables (`foo.bar`). The latter cannot be inlined
# so we don't inline anything
uninlined-format-args = { level = "allow", priority = 127 }

[lints.rust]
let_underscore_drop = { level = "deny", priority = 127 }
non_ascii_idents = { level = "deny", priority = 127 }

[[test]]
name = "rust-seed-with-web"
path = "back-end/tests/integration_tests.rs"

[features]
default = []
tokio-console = ["dep:console-subscriber"]

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
axum-proxy = { version = "0.5.1", features = ["axum"] }
color-eyre = "0.6.5"
console-subscriber = { version = "0.4.1", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = [
    "macros",
    "io-util",
    "io-std",
    "rt-multi-thread",
    "signal",
    "time",
] }
tokio-util = { version = "0.7.15", features = ["rt"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "fs", "trace"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = { version = "2.5.4", features = ["serde"] }
