[package]
name = "magwords"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
include.workspace = true
build = "src/build.rs"

[features]
default = []
tokio-console = ["dep:console-subscriber"]

[dependencies]
axum = { version = "0.8.9", features = ["macros", "ws"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
color-eyre = "0.6.5"
console-subscriber = { version = "0.5.0", optional = true }
http = "1.4.0"
mimalloc = "0.1.49"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "time",
] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }
tower-proxy = { version = "0.8.0", features = ["axum"] }
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.23.1", features = ["v7"] }

[dev-dependencies]
pretty_assertions = "=1.4.1"

[lints]
workspace = true
